add ignore file info.

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,11 @@ fabric.properties
 *.class
 *.log
 
+
+### Paiza ###
 src/paiza/
 
+### Statistic ###
+.idea\statistic.xml
 
 # End of https://www.gitignore.io/api/scala,intellij
